  Added "Trailing Spaces" section to docs thanks to Michael A Chase.
  Added support for binary floats/doubles thanks to Dennis Box.
  Added INSTANCE_NAME, SERVER and SERVICE_NAME as valid connect keywords
    in the 'dbi:Oracle:x=y' short form of connecting without tnsnames.ora.
    For example 'dbi:Oracle:host=localhost;service_name=xe;server=dedicated'

  Changed "Binding Cursors" docs, clarifying examples thanks to Charles Jardine.
  Changed tests to use ORACLE_DSN or DBI_DSN env vars if defined thanks to Jill Vogel.
  Updated README.vms re logical name tables thanks to Jakob Snoer.
  Removed README.utf8 since the topic was covered better in the main docs.
  Updated README.aix thanks to Stephen de Vries.
  Updated README.macosx thanks to Stephen de Vries.
  Renamed README.*'s to add .txt suffix to make life easier for some.

  Changes to Makefile.PL:
    Instant Client support thanks to Hilmar Lapp, John Scoles and others.
    Improved HP-UX support thanks to H.Merijn Brand.
    Avoid risk of sqlplus hanging thanks to Mark Dedlow.
    More reliably use correct sqlplus thanks to Honza Pazdziora.
    Improved build rule and Oracle header file detection.
    Improved cygwin build thanks to Andy Hassall.
    VMS logical name checks thanks to Jakob Snoer.

  The Copyright terms for DBD::Oracle have been simplified and now read:
    The DBD::Oracle module is free open source software; you can
    redistribute it and/or modify it under the same terms as Perl 5.

=head1 Changes in DBD-Oracle 1.16 (svn rev 515)   22nd October 2004

  NOTE:
  This release has major changes to Unicode support. See below.
  It no longer supports the old Oracle 7 OCI interface.
  It requires DBI >= 1.38 for some of the tests if using Perl 5.6.
  It no longer supports Perl 5.5 or earlier.

  Fixed placeholder names to be case insensitive thanks to Charles Jardine.
  Fixed some LOB test problems with Oracle 8.1.7 by implementing ora_lob_append